# GpuMemoryAllocator

./: .gitignore  CMakeLists.txt  CMakePresets.json  Directory.Build.props  GpuMemoryAllocator.slnx  README.md  build.ps1  build.sh  build_dotnet.ps1  build_native.ps1  build_native.sh  gen.ps1  init.ps1  init.sh  stub.cc  sync.ps1  vcpkg-configuration.json  vcpkg.json
.config/: dotnet-tools.json
.github/workflows/: build-linux-arm64.yml  build-linux-x64.yml  build-macos-arm64.yml  build-macos-x64.yml  build-macos.yml  build-managed-d3d12ma.yml  build-managed-vma.yml  build-win-arm64.yml  build-win-x64.yml  build.yml
D3d12PostGen/: D3d12PostGen.csproj  Program.cs
GpuMemoryAllocator.D3d12/: Binding.cs  Com.cs  GpuMemoryAllocator.D3d12.csproj  IUnknownImpl.cs  InlineArray.cs  Manual.cs  binding.xml  gen.ps1  gen.rsp  global.using.cs
GpuMemoryAllocator.Vulkan/: Binding.cs  GpuMemoryAllocator.Vulkan.csproj  InlineArray.cs  binding.xml  gen.ps1  gen_on_win.rsp  global.using.cs
Native/: buid_d3d12ma-meta.ps1  buid_d3d12ma-win-arm64.ps1  buid_d3d12ma-win-x64.ps1  buid_vma-linux-arm64.ps1  buid_vma-linux-x64.ps1  buid_vma-macos-arm64.ps1  buid_vma-meta.ps1  buid_vma-win-arm64.ps1  buid_vma-win-x64.ps1  buid_vma.ps1  nuspec.tt  sync.ps1
Native/D3D12MA.runtime.win-arm64/: D3D12MA.runtime.win-arm64.csproj  D3D12MA.runtime.win-arm64.nuspec  D3D12MA.runtime.win-x64.nuspec
Native/D3D12MA.runtime.win-x64/: D3D12MA.runtime.win-x64.csproj  (+1 more)
VkPostGen/: Program.cs  VkPostGen.csproj
triplets/: arm64-windows.cmake  x64-windows.cmake
vma/: CMakeLists.txt  lib.cc
(+41 files in other folders)
